CSS: Little mobile fix + contact header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,18 @@
 #app-content-header {
 	background-color: #E6E6E6;
 	min-height: 30px;
-	width: 100%;
+	width: 80%;
 	float: left;
 	position: fixed;
 	top: 45px;
 	padding: 15px;
 	box-shadow: 0 1px 0 0 #CCC;
+}
+
+@media screen and (max-width : 770px) {
+	#app-content-header {
+		width: 100%;
+	}
 }
 
 #ocsms-contact-avatar {
@@ -85,6 +91,11 @@
 #ocsms-contact-actions,
 #ocsms-contact-avatar {
 	display: inline-block;
+	float: left;
+}
+
+#ocsms-contact-actions {
+	float: left;
 }
 
 
